--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.47.10",
+    "lucide-react": "^0.545.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.9.3"
+    "react-router-dom": "^7.9.3",
+    "recharts": "^3.3.0",
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
